language/move-lang/tests/move_check/locals/use_before_assign_loop.exp
error: 

   ┌── tests/move_check/locals/use_before_assign_loop.move:3:13 ───
   │
 3 │         let x: u64;
   │             - The local might not have a value due to this position. The local must be assigned a value before being used
 4 │         loop { let y = move x + 1; x = 0; y; }
   │                        ^^^^^^ Invalid usage of local 'x'
   │

error: 

   ┌── tests/move_check/locals/use_before_assign_loop.move:8:13 ───
   │
 8 │         let x: u64;
   │             - The local might not have a value due to this position. The local must be assigned a value before being used
 9 │         loop { let y = x + 1; if (cond) { continue }; x = 0; y; }
   │                        ^ Invalid usage of local 'x'
   │

error: 

    ┌── tests/move_check/locals/use_before_assign_loop.move:13:13 ───
    │
 13 │         let x: u64;
    │             - The local might not have a value due to this position. The local must be assigned a value before being used
 14 │         loop { let y = &x; _ = move y; x = 0 }
    │                        ^^ Invalid usage of local 'x'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_loop.move:18:13 ───
    │
 18 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
 19 │         loop { let y = &x; _ = move y; if (cond) { x = 0 }; break };
    │                        ^^ Invalid usage of local 'x'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_loop.move:18:13 ───
    │
 18 │         let x: u64;
    │             - The local might not have a value due to this position. The local must be assigned a value before being used
 19 │         loop { let y = &x; _ = move y; if (cond) { x = 0 }; break };
 20 │         x;
    │         ^ Invalid usage of local 'x'
    │

